firstrade.com (archived on 2009-06-16)
{
  "alexa_rank": 64111,
  "analysis_subcorpus": true,
  "categories": "economyandfinance",
  "char_count": 6246,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.59,
  "homepage_snapshot_redirected_domain": "firstrade.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331114127id_/http://www.firstrade.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331114127id_/http%3A//firstrade.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "firstrade.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616163501id_/http%3A//www.firstrade.com/public/en_us/support/privacyandsecuritypolicy",
  "policy_title": "Online Trading Security, Internet Privacy Info - Online Trading with Firstrade",
  "policy_url": "firstrade.com/public/en_us/support/privacyandsecuritypolicy",
  "sha1": "2bfcd31abacb1c14784c75ee2631e2d9229b9f84",
  "simhash": 13846734540747290193,
  "simhash_updated": false,
  "site_hostname": "firstrade.com",
  "site_url": "http://firstrade.com",
  "smog": 15.11,
  "strict_updated": false,
  "timestamp": "20090616163501",
  "word_count": 950,
  "year": 2009
}

--- a/f/fi/fir/firstrade.com.html
+++ b/f/fi/fir/firstrade.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the firstrade.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216065604id_/http%3A//www.firstrade.com/public/en_us/support/privacyandsecuritypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the firstrade.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616163501id_/http%3A//www.firstrade.com/public/en_us/support/privacyandsecuritypolicy) for the most accurate reproduction.-->
 
-<html><head>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
 <link rel="SHORTCUT ICON" href="/favicon.ico">
 <title>Online Trading Security, Internet Privacy Info - Online Trading with Firstrade</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,6 +9,7 @@
 <meta name="Keywords" content="trading stock,discount online brokerage,discount stock brokers,discount online brokers,low commission stock brokers,privacy,security">
 <meta name="Robots" content="index,follow">
 <meta name="GOOGLEBOT" content="index,follow">
+
 <script type="text/javascript" language="JavaScript" src="/en_us/public/js/main.js"></script></head><body leftmargin="0" topmargin="10" marginwidth="0" marginheight="10"><div id="dropmenudiv" style="visibility:hidden;width:170px;background-color:#FFFFCC" onmouseover="clearhidemenu()" onmouseout="dynamichide(event)"></div>
 <script type="text/javascript" language="JavaScript" src="/en_us/public/js/menu.js"></script>
 
@@ -23,48 +24,57 @@
 <table width="770" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><table width="100%" height="55" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-    <td valign="top" background="/en_us/public/images/header_l.gif"><table width="100%" height="55" border="0" cellpadding="0" cellspacing="0">
-        <tbody><tr>
-          <td valign="top"><a href="http://www.firstrade.com"><img src="/en_us/public/images/logo_bti.gif" alt="Firstrade Home" width="170" height="41" hspace="6" vspace="1" border="0" align="baseline"></a></td>
-          <td width="530" valign="top" background="/en_us/public/images/login_bg.gif"><table width="100%" height="54" border="0" cellpadding="0" cellspacing="0">
-              <form name="loginForm" method="post" action="https://investor.firstrade.com/firstrade/login.do" target="_top" autocomplete="off"></form>
-                <tbody><tr>
-                  <td align="right" nowrap="nowrap" height="30"><img src="/en_us/public/images/secure.gif" alt="Lock" width="11" height="12" hspace="6" vspace="0" border="0" align="baseline"><span class="rtnavtitle"><a href="https://investor.firstrade.com/firstrade/login.do">Login</a>: User ID</span>
-                    <input name="username" type="text" class="std" id="username" size="8" maxlength="20">
-                    <span class="rtnavtitle">Password</span>
-                    <input name="password" type="password" class="std" id="password" size="8" maxlength="20">
-                    <select name="destination" class="std">
-                      <option value="mainmenu" selected="">Start Page:</option>
-                      <option value="stockorder">Stock Order</option>
-                      <option value="optionorder">Option Order</option>
-                      <option value="orderstatus">Order Status</option>
-                      <option value="positions">Positions</option>
-                      <option value="portfolio">Portfolios</option>
-                      <option value="balances">Balances</option>
-                      <option value="history">Account History</option>
-                    </select>
-                    &nbsp;
-                    <input type="hidden" name="locale" value="en_us">
-                    </td>
-                  <td width="71" valign="middle"><span class="rtnavtitle">
-                    <input name="login" value="Log In" type="image" src="/en_us/public/images/login_button3.gif" border="0">
-                    </span></td>
-                </tr>
-                <tr valign="bottom"><td colspan="2" align="right" valign="bottom"><a href="http://www.firstrade.com/public/zh_tw/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/n_zh_tw.png" alt="Traditional Chinese" width="62" height="23" hspace="0" vspace="0" border="0"></a><a href="http://www.firstrade.com/public/zh_cn/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/n_zh_cn.png" alt="Simplified Chinese" width="62" height="23" hspace="0" vspace="0" border="0"></a></td>
-    </tr>
-              
-          </tbody></table></td>
-        </tr>
-      </tbody></table></td>
-    <td width="5" align="right" valign="top" background="/en_us/public/images/header_r.gif"><img src="/global/shared/images/blank.gif" width="5"></td>
-  </tr>
-</tbody></table>
-	<!---->
-<!--
+   <tbody><tr>
+     <td valign="top" background="/en_us/public/images/header_l.gif">
+     	<table width="100%" height="55" border="0" cellpadding="0" cellspacing="0">
+           <tbody><tr>
+              <td valign="top"><a href="http://www.firstrade.com"><img src="/en_us/public/images/logo_bti.gif" alt="Firstrade Home" width="170" height="41" hspace="6" vspace="1" border="0" align="bottom"></a>
+              </td>
+              <td width="530" valign="top" background="/en_us/public/images/login_bg.gif">
+              	<table width="100%" height="54" border="0" cellpadding="0" cellspacing="0">
+                <form name="loginForm" method="post" action="https://investor.firstrade.com/firstrade/login.do" target="_top" autocomplete="off"></form>
+                   <tbody><tr>
+                      <td align="right" nowrap="nowrap" height="30"><img src="/en_us/public/images/secure.gif" alt="Lock" width="11" height="12" hspace="6" vspace="0" border="0" align="bottom"><span class="rtnavtitle"><a href="https://investor.firstrade.com/firstrade/login.do">Login</a>: User ID</span>
+                        <input name="username" type="text" class="std" id="username" size="8" maxlength="20">
+                        <span class="rtnavtitle">Password</span>
+                        <input name="password" type="password" class="std" id="password" size="8" maxlength="20">
+                        <select name="destination" class="std">
+                          <option value="mainmenu" selected="">Start Page:</option>
+                          <option value="stockorder">Stock Order</option>
+                          <option value="optionorder">Option Order</option>
+                          <option value="orderstatus">Order Status</option>
+                          <option value="positions">Positions</option>
+                          <option value="portfolio">Portfolios</option>
+                          <option value="balances">Balances</option>
+                          <option value="history">Account History</option>
+                        </select>
+                        &nbsp;
+                        <input type="hidden" name="locale" value="en_us">
+                        
+                      </td>
+                      <td width="71" valign="middle"><span class="rtnavtitle">
+                        <input name="login" value="Log In" type="image" src="/en_us/public/images/login_button3.gif" border="0">
+                        </span>
+                      </td>
+                    </tr>
+                    <tr valign="bottom">
+                    	<td colspan="2" align="right" valign="bottom"><a href="http://www.firstrade.com/public/zh_tw/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/n_zh_tw.png" alt="Traditional Chinese" width="62" height="23" hspace="0" vspace="0" border="0"></a><a href="http://www.firstrade.com/public/zh_cn/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/n_zh_cn.png" alt="Simplified Chinese" width="62" height="23" hspace="0" vspace="0" border="0"></a>
+                     	</td>
+        			</tr>
+                  </tbody></table>
+               </td>
+            </tr>
+          </tbody></table>
+       </td>
+       <td width="5" align="right" valign="top" background="/en_us/public/images/header_r.gif"><img src="/global/shared/images/blank.gif" width="5">
+       </td>
+      </tr>
+    </tbody></table>
+	<!--
 <table width="100%" border="0" cellpadding="2" cellspacing="1" bgcolor="#666666">
   <tr>
-    <td height="30" align="center" bgcolor="#FFFFCC" class="std">U.S. markets will close at 1:00PM EST on Friday, November 28th.  Firstrade will operate at normal business hours.</td>
+    <td align="center" bgcolor="#FFFFCC" class="std">The Investor site will be unavailable from 8PM-1AM EST during which we will be performing system upgrades and maintenance.<br />
+</td>
   </tr>
 </table>
 -->
@@ -85,11 +95,7 @@
         <div id="menu7" class="dropdownMenu"> <a href="/public/en_us/community/investornetwork/" title="online trading community">The Investor Network</a> <a href="/public/en_us/community/newsletter/" title="online stock broker">Firstrade Newsletter</a> <a href="/blog/">Firstrade Blog</a>  </div>
         <div id="menu8" class="dropdownMenu"> <a href="/public/en_us/support/" title="discount broker">Contact Us</a> <a href="/public/en_us/support/livechat/" title="trading stock">Live Chat</a> <a href="/public/en_us/support/fundyouraccount/" title="trading stock">Funding Your Account</a> <a href="/public/en_us/support/transfertofirstrade/" title="trading stock">Transfer to Firstrade</a> <a href="/public/en_us/support/faqs/" title="trading stock">FAQs</a> <a href="/public/en_us/support/glossary/" title="trading stock">Glossary</a> <a href="/public/en_us/support/formscenter/" title="trading stock">Forms Center</a> </div>
 
-<!-- ^^^ END MAIN NAVIGATION ^^^ -->
-        </td>
-    <!--<td align="right"><a href="http://www.firstrade.com/public/zh_tw/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/zh_tw.gif" alt="Traditional Chinese" width="56" height="26" hspace="0" vspace="0" border="0" /></a></td>
-    <td width="71" align="right"><a href="http://www.firstrade.com/public/zh_cn/welcome/" title="Primary Keyword of Linked to Page"><img src="/en_us/public/images/zh_cn.gif" alt="Simplified Chinese" width="64" height="26" hspace="0" vspace="0" border="0" /></a></td>-->
-  </tr>
+  </td></tr>
 </tbody></table>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
@@ -354,22 +360,23 @@ MM_preloadImages('/en_us/public/images/ln_pricing_on.gif');
   </tr>
   <tr align="center">
     <td colspan="12"><span class="bodyText"><br>
-©2008 Firstrade Securities Inc. All rights reserved. Member <a href="http://www.finra.org" target="_blank">FINRA</a>/<a href="http://www.sipc.org" target="_blank">SIPC</a>. </span><a href="/public/en_us/support/importantinformation/" title="trading stock" class="copyrtlinks"><br>
+©2009 Firstrade Securities Inc. All rights reserved. Member <a href="http://www.finra.org" target="_blank">FINRA</a>/<a href="http://www.sipc.org" target="_blank">SIPC</a>. </span><a href="/public/en_us/support/importantinformation/" title="trading stock" class="copyrtlinks"><br>
 Important Information</a><span class="bodyText"> | <a href="/public/en_us/support/privacyandsecuritypolicy/" title="trading stock" class="copyrtlinks">Privacy Policy</a> | <a href="/public/en_us/knowledgecenter/securitycenter/" title="internet stock trading" class="copyrtlinks">Security Center</a><br>
 System response and access times may vary due to market conditions, system performance, and other factors.</span></td>
   </tr>
 </tbody></table>
 
 <!-- SendROI Tracking Code -->
-<script language="JAVASCRIPT" src="//track.sendtraffic.com/script/v2_2.js"></script>
-<script language="JAVASCRIPT">
+<script language="javascript" src="//track.sendtraffic.com/script/v2_2.js"></script>
+<script language="javascript">
 <!--
 SENDROI_TrackHit('d61b56ed-916e-4f61-99f3-21eb3bb6a828', 0, null, null, '.firstrade.com');
 //-->
 </script>
 <noscript>
-<IMG SRC="//track.sendtraffic.com/track.aspx?ckid=d61b56ed-916e-4f61-99f3-21eb3bb6a828">
+<img src="//track.sendtraffic.com/track.aspx?ckid=d61b56ed-916e-4f61-99f3-21eb3bb6a828" alt="tracking" />
 </noscript>
+<img src="http://bh.contextweb.com/bh/set.aspx?action=add&amp;advid=1437&amp;token=FITR1" width="1" height="1" border="0">
 <!-- End of SendROI Tracking Code -->
 
 </body></html>
