bluebottle.com (archived on 2009-06-16)
{
  "alexa_rank": 49558,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 9765,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.3,
  "homepage_snapshot_redirected_domain": "bluebottle.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402212349id_/http://www.bluebottle.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402212349id_/http%3A//bluebottle.com",
  "interval": "2009_A",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bluebottle.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616165228id_/http%3A//www.bluebottle.com/privacy.php",
  "policy_title": "Bluebottle Email: Privacy",
  "policy_url": "bluebottle.com/privacy.php",
  "sha1": "2b9b0c99b8fd2369a51eb1cfd6bbcbb50bded6c5",
  "simhash": 138037715948452513,
  "simhash_updated": false,
  "site_hostname": "bluebottle.com",
  "site_url": "http://bluebottle.com",
  "smog": 14.31,
  "strict_updated": true,
  "timestamp": "20090616165228",
  "word_count": 1574,
  "year": 2009
}

--- a/b/bl/blu/bluebottle.com.html
+++ b/b/bl/blu/bluebottle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bluebottle.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217044627id_/http%3A//www.bluebottle.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bluebottle.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616165228id_/http%3A//www.bluebottle.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Bluebottle Email: Privacy</title>
@@ -96,7 +96,8 @@ function selectField() {
 <!-- AddThis Bookmark Button END --> 
 
 					<div id="quote"> 
-						<p>"As a free Pop3 service the Bluebottle email service is the best I have come across. The spam filtering is excellent."- <em><strong>Alex G</strong></em></p><p>"Thank you so much for your free email service. It is the only email I allow my children to use. The use of "trusted' senders and the ZERO spam allows me to be comfortable with allowing them to use email." - <strong>Jennifer G,</strong> <em>June 2006</em></p><p>"A great service! The best free e-mail provider around!"- <strong><em>Connagh</em></strong></p><p>"I see that you've responded to your customers ideas with great services. I would like to thank you for these improvements." - <em><strong>Murat S</strong></em></p><p>"I've been a Bluebottle subscriber for awhile now, and know you offer a great service." - <strong>Rick R,</strong> <em>July 2006</em></p>
+						<p><br>
+"I have been very happy with your service and would recommend it to any of my friends." - <strong>Alex, </strong><em>June 2006</em></p><p>"The service is too excellent and I will inform all my colleagues to use this site." - <strong>Maruthi, </strong></p><p>"Thanks for your excellent service, and I recommend to everyone the Bluebottle experience." - <strong><em>Sebastian N</em></strong></p><p>"I've been a Bluebottle subscriber for awhile now, and know you offer a great service." - <strong>Rick R,</strong> <em>July 2006</em></p><p>"Your email service is the best one of all. There is no other better spam protector than yours.... TRULY THE BEST." - <strong><em>Jainam S</em></strong></p> 
       					</div> 
      				</div> 
 				<div id="right">
