--- a/h/hp/hpa/hpathy.com.html
+++ b/h/hp/hpa/hpathy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hpathy.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216072231id_/http%3A//www.hpathy.com/essentia/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hpathy.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616170035id_/http%3A//www.hpathy.com/essentia/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Homeopathy 4 Everyone, Homeopathic Resource Center</title>
@@ -14,21 +14,26 @@
 <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#C1C1FF">
   <tbody><tr><td width="150" height="90" align="left" valign="bottom"><a href="http://www.hpathy.com/"><img src="../images/Hpathynewlogo.gif" alt="Homeopathy" width="150" height="84" border="0"></a> 
       </td>
-    <td align="center" valign="middle"><center><a href="http://www.hpathy.com/adsoft/admentorredir.asp?id=6&amp;way=ban"><img src="http://www.hpathy.com/adsoft/bannermedia/hompath-ny2.jpg" alt="Hompath MD" border="0" width="388" height="60"></a></center></td>
-    <td width="220" align="right" valign="bottom">
-<form method="get" action="http://www.google.com/custom" target="google_window">
-        <table width="220" height="90" border="0" align="right" cellpadding="0" cellspacing="0" bgcolor="#FFDFFF">
-          <tbody><tr><td rowspan="2" align="right" nowrap="nowrap" bgcolor="#C1C1FF"><img src="../images/curvepink.jpg" width="37" height="90"></td>
-            <td align="center" nowrap="nowrap"> <input type="hidden" name="domains" value="Hpathy.com"> 
-              <input type="text" name="q" size="25" maxlength="255" value=""> 
-              <br> <font color="#990000"><strong>Search</strong></font> <input type="radio" name="sitesearch" value=""> 
-              <font size="1" color="#990000"><strong>Web</strong></font> <input name="sitesearch" type="radio" value="Hpathy.com" checked=""> 
-              <strong><font size="1" color="#990000">Hpathy</font></strong> <input type="hidden" name="client" value="pub-1166546611319191"> 
-              <input type="hidden" name="forid" value="1"> <input type="hidden" name="ie" value="ISO-8859-1"> 
-              <input type="hidden" name="oe" value="ISO-8859-1"> <input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#C1C1FF;VLC:663399;AH:center;BGC:FFFFFF;LBGC:C1C1FF;ALC:000000;LC:000000;T:0000FF;GFNT:0000FF;GIMP:0000FF;LH:50;LW:89;L:http://www.hpathy.com/images/hpathynewlogo2s.gif;S:http://www.hpathy.com;FORID:1;"> 
-              <input type="hidden" name="hl" value="en"></td></tr><tr> 
-            <td align="center" nowrap="nowrap">&nbsp; <input type="submit" name="sa" value="Search With Google" style="font-family:Verdana; font-size:11px; background:#C1C1FF; color:#000"> 
-            </td></tr></tbody></table></form></td></tr><tr><td height="1" align="center" bgcolor="#42A0FF"></td><td height="1" colspan="2" align="right" valign="top" bgcolor="#42A0FF"></td></tr>
+    <td align="center" valign="middle"></td>
+    <td align="center" valign="middle">
+           <table width="250" height="90" border="0" align="right" cellpadding="0" cellspacing="0" bgcolor="#FFDFFF">
+              <tbody><tr>
+                <td align="right" nowrap="nowrap" bgcolor="#C1C1FF"><img src="../images/curvepink.jpg" width="37" height="90"></td>
+              <td align="center" valign="middle" nowrap="nowrap"> 
+                <form action="http://www.google.com/cse" id="cse-search-box" target="_blank">
+  <div>
+    <input type="hidden" name="cx" value="partner-pub-1166546611319191:o4l6qg-h4v3">
+    <input type="hidden" name="ie" value="ISO-8859-1">
+    <input type="text" name="q" size="27"><br>
+    <input type="submit" name="sa" value="Search">
+  </div>
+</form>
+<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+
+              </td>
+              </tr>
+            </tbody></table>
+          </td></tr><tr><td height="1" align="center" bgcolor="#42A0FF"></td><td height="1" colspan="2" align="right" valign="top" bgcolor="#42A0FF"></td></tr>
   <tr><td colspan="3" align="center" bgcolor="#FFDFFF"><table width="100%" height="100%" border="0" align="right" cellpadding="0" cellspacing="0">
         <tbody><tr align="center"><td align="left"><strong><font color="#0000CC" size="1"> &nbsp;Homeopathy for Everyone</font></strong></td><td width="20" rowspan="2">&nbsp;</td>
           <td rowspan="2"><a class="smallfont" href="http://www.hpathy.com/homeopathyforums/"><img src="../images/forum9.gif" alt="Homeopathy Forum" width="30" height="28" border="0">Forums</a></td>
@@ -149,6 +154,14 @@ google_ad_height = 60;
               If you wish to unsubscribe to the Hpathy newsletter, you can also 
               do so within any of the newsletters you receive, or you can unsubscribe 
               under "Contact Us" on our homepage.</p>
+            <p><strong>Google Ads</strong></p>
+            <p> * Google, as a third party vendor, uses cookies to serve ads on 
+              this site.<br>
+              * Google's use of the DART cookie enables it to serve ads to our 
+              users based on their visit to our sites and other sites on the Internet.<br>
+              * Users may opt out of the use of the DART cookie by visiting the 
+              <a href="http://www.google.com/privacy_ads.html" target="_blank">Google 
+              ad and content network privacy policy</a>. </p>
             <p><b>Notification of Changes<br>
               </b>If we are going to use your personal identifiable information 
               in a manner different from that stated at the time of collection, 
@@ -295,7 +308,7 @@ google_ad_height = 60;
           <br> <a href="../essentia/teamhpathy.asp" class="classside">The Hpathy 
           Team</a><br> <a href="../essentia/aboutus.asp" class="classside">About 
           Hpathy.com</a><br> <br> <hr align="left" width="90%" size="1"> <p> <font size="1"> 
-            Page Last Updated 11/5/2008 11:02:24 PM
+            Page Last Updated 4/5/2009 12:48:28 AM
             <br>
             <br>
             <br>
@@ -303,7 +316,7 @@ google_ad_height = 60;
             <br>
             <br>
             </font><font size="1" color="#C60000"><b> 
-            311 Active Users at Hpathy
+            592 Active Users at Hpathy
             </b></font><br>
             <br>
           </p></td></tr>
@@ -311,7 +324,16 @@ google_ad_height = 60;
         <td align="center" bgcolor="#FFFFFF">&nbsp;</td></tr>
     </tbody></table></td></tr><!-- google_ad_section_end -->
   <tr> 
-    <td colspan="2"><table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="C1C1FF"><tbody><tr><td bgcolor="#003366" height="20"></td></tr></tbody></table></td>
+    <td colspan="2"><table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="C1C1FF"><tbody><tr><td bgcolor="#003366" height="20"></td></tr></tbody></table>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7603703-1");
+pageTracker._trackPageview();
+} catch(err) {}</script></td>
   </tr>
 </tbody></table>
 
