--- a/v/ve/veb/vebtoday.com.html
+++ b/v/ve/veb/vebtoday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vebtoday.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216042057id_/http%3A//www.vebtoday.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vebtoday.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616170710id_/http%3A//vebtoday.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -54,6 +54,14 @@
       <p class="style2">&nbsp;</p>    </td>
   </tr>
 </tbody></table>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9313099-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </body></html>
