--- a/m/me/met/met.ie.html
+++ b/m/me/met/met.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the met.ie privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216013836id_/http%3A//www.met.ie/privacy-statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the met.ie privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616171003id_/http%3A//www.met.ie/privacy-statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Statement - Met Éireann - The Irish Meteorological Service Online</title>
@@ -13,7 +13,7 @@
 <meta name="DC.Identifier" content="http://www.met.ie">
 <meta name="DC.Creator" content="Met Éireann">
 <meta name="DC.Title" content="Met Éireann - The Irish Weather Service">
-<meta name="DC.Date.Created" content="2008-12-16">
+<meta name="DC.Date.Created" content="2009-6-16">
 <style type="text/css" media="screen">@import url(/ssi/met.css);</style>
 
 <script src="/ssi/met.js" type="text/javascript"></script>
@@ -27,9 +27,11 @@ function openWindow(url,width,height)
 </script>
 </head>
 <body>
+
+<div id="floatcenter">
 <!-- No index start 1 -->
 
-<table width="90%" border="0" cellspacing="0" cellpadding="0" class="topcontainer">
+<table width="960" border="0" cellspacing="0" cellpadding="0" class="topcontainer09">
   <tbody><tr>
     <td width="15%"><div align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/default.asp"><img src="/images/met.ie-logo.gif" alt="Met Éireann - met.ie - The Irish Meteorological Service Online" title="Met Éireann - met.ie - The Irish Meteorological Service Online" width="60" height="108" border="0"></a></div></td>
     <td width="4%">&nbsp;</td>
@@ -50,11 +52,11 @@ function openWindow(url,width,height)
           <tbody><tr>
             <td><div align="left"><img src="/images/spacer.gif" alt="" height="32"></div></td>
             <td class="quickinfotext"> <div align="right">
-                16 Nollaig 2008
+                Dé Máirt, 16 Meitheamnh 2009
               </div></td>
             <td><div align="right">&nbsp;<img src="/images/divider.gif" alt="" width="2" height="20">&nbsp;</div></td>
 
-            <td title="Local Weather Information from the Dublin Weather Station at 01:30 on 16 December 2008">
+            <td title="Local Weather Information from the Dublin Weather Station at 17:29 on 16 June 2009">
             <div align="right">
             	<form action="/privacy-statement/Default.asp?" method="get" style="margin:0px">
             	<select name="LW" onchange="submit()" class="TextInput">
@@ -89,11 +91,11 @@ function openWindow(url,width,height)
             	</select>
             	</form>
             </div></td>
-            <td> <div align="right"><img src="/images/infobar_icons/clear_night.png" alt="FINE
+            <td> <div align="right"><img src="/images/infobar_icons/scattered_clouds.png" alt="FAIR
 " width="30" height="18">
               </div></td>
-            <td> <div align="right"><img src="/images/infobar_icons/8.gif" alt="8 Celsius" width="18" height="18"></div></td>
-            <td> <div align="right">SW Moderate&nbsp; </div></td>
+            <td> <div align="right"><img src="/images/infobar_icons/20.gif" alt="20 Celsius" width="18" height="18"></div></td>
+            <td> <div align="right">SW Fresh&nbsp; </div></td>
 
 
             <td><div align="right"><img src="/images/divider.gif" alt="" width="2" height="20"></div></td>
@@ -121,7 +123,7 @@ function openWindow(url,width,height)
 </tbody></table>
 <!-- No index end 1 -->
 
-<table width="90%" border="0" cellpadding="0" cellspacing="0" class="maincontainer">
+<table width="960" border="0" cellpadding="0" cellspacing="0" class="maincontainer09">
   <tbody><tr>
     <td width="200" bgcolor="#F2F2F2">&nbsp;</td>
     <td bgcolor="#F2F2F2" style="background-image:url(/images/breadcrumb_bg.gif)">
@@ -138,6 +140,7 @@ function openWindow(url,width,height)
 <div class="bgcolor" id="portfolio">
   <div class="padding">
       <div class="border" id="navigationitems">
+      <a href="/forecasts/warnings_ga.asp" title="weather warning" class="naviwarning" id="weather warning">AIMSIR RABHADH</a>
 	  <a href="javascript:;" title="Forecasts" class="navioff" id="mainforecasts" onclick="met_swapClass(1,'mainforecasts','navion','navioff','a');met_swapClass(1,'subforecasts','on','off','ul')" onmouseover="mm_displayStatusMsg('Opens Menu for Forecasting');return document.mm_returnValue" onmouseout="mm_displayStatusMsg('');return document.mm_returnValue">Réamhaisnéisí</a>
         <ul class="off" id="subforecasts">
           <li><a href="/forecasts/default_ga.asp" id="National2">Náisiúnta</a></li>
@@ -148,7 +151,7 @@ function openWindow(url,width,height)
           <li><a href="/forecasts/atlantic-charts_ga.asp" id="AtlanticCharts2">Cairteacha Atlantacha</a></li>
           <li><a href="/forecasts/3hour_ga.asp" id="Hour">3 huaire</a></li>
           <li><a href="/forecasts/meteoalarm_ga.asp" id="Meteo2">Meteoalarm</a></li>
-         
+
           </ul>
         <a href="javascript:;" title="Recent Weather" class="navioff" id="mainrecentweather" onclick="met_swapClass(1,'mainrecentweather','navion','navioff','a');met_swapClass(1,'subrecentweather','on','off','ul')" onmouseover="mm_displayStatusMsg('Opens Menu for Recent Weather');return document.mm_returnValue" onmouseout="mm_displayStatusMsg('');return document.mm_returnValue">An
         Aimsir is Déanaí </a>
@@ -173,7 +176,7 @@ function openWindow(url,width,height)
           Atlantach Thuaidh - IR</a></li>
           <li><a href="/sat/euro-v_ga.asp" id="EuropeNthAtlantic-Vis">An Eoraip,
           Atlantach Thuaidh - Vis</a></li>
-          <li><a href="/sat/full-ir_ga.asp" id="FullDisk-IR" class="">Diosca Iomlán 
+          <li><a href="/sat/full-ir_ga.asp" id="FullDisk-IR" class="">Diosca Iomlán
               - IR</a></li>
           <li><a href="/sat/full-v_ga.asp" id="FullDisk-Vis">Diosca Iomlán  - Vis</a></li>
         </ul>
@@ -261,11 +264,27 @@ function openWindow(url,width,height)
           <li><a href="/about/valentiaobservatory/default_ga.asp" id="ValentiaObservatory">Réadlann
           Dhairbhre</a></li>
           <li><a href="/about/weatherdial/default_ga.asp" id="Weatherdial">Weatherdial</a></li>
+          <li><a href="/publications/default_ga.asp" title="Publications" id="publications">Foilseacháin</a></li>
+          <li><a href="/conversions/default_ga.asp" title="Conversions" id="conversions">Coinbhéartuithe</a></li>
+          <li><a href="/sitemap/default_ga.asp" title="Site Map" id="site_map">Léarscáil
+        Láithreáin</a></li>
+        <li><a href="/links/default_ga.asp" title="Links" id="links">Naisc</a></li>
+        <li><a href="/faqs/default_ga.asp" title="FAQs" id="faqs">Ceisteanna
+        Coitianta</a></li>
+        <li><a href="/vacancies/default_ga.asp" title="vacancies" id="vacancies">Folúntais</a></li>
+        <li><a href="/contactus/default_ga.asp" title="Contact us" id="contact_us">Teagmháil
+        Linn</a></li>
         </ul>
-        <a href="/publications/default_ga.asp" title="Publications" class="navioff2" id="publications">Foilseacháin</a><a href="/conversions/default_ga.asp" title="Conversions" class="navioff2" id="conversions">Coinbhéartuithe</a> <a href="/sitemap/default_ga.asp" title="Site Map" class="navioff2" id="site_map">Léarscáil
-        Láithreáin</a> <a href="/links/default_ga.asp" title="Links" class="navioff2" id="links">Naisc</a> <a href="/faqs/default_ga.asp" title="FAQs" class="navioff2" id="faqs">Ceisteanna
-        Coitianta</a> <a href="/contactus/default_ga.asp" title="Contact us" class="navioff2" id="contact_us">Teagmháil
-        Linn</a> <a href="/vacancies/default_ga.asp" title="vacancies" class="navioff2" id="vacancies">Folúntais</a> <a href="/mobile/mobile_ga.asp" title="mobile.met.ie" class="navioff2" id="mobile.met.ie">mobile.met.ie</a> <a href="/privacy-statement/default_ga.asp" title="privacy-statement" class="navioff2" id="privacy-statement2">Ráiteas
+
+		<a href="/news/" title="Latest news" class="navioff2" id="Latest_News">Nuacht</a>
+        <a href="/mobile/mobile.asp" title="mobile.met.ie" class="navimob" id="mobile.met.ie">mobile.met.ie</a>
+
+
+
+
+
+
+        <a href="/privacy-statement/default_ga.asp" title="privacy-statement" class="navioff2" id="privacy-statement2">Ráiteas
         Príobháideachta</a> <a href="/privacy-statement/Default.asp?prn=1" target="_blank" title="Print" class="navioff2" id="print">Clóigh an Leathanach seo</a><a href="/default.asp?UserLang=EN" title="English" class="navioff2" id="gaeilge">English</a>      </div>
     </div>
   </div>
@@ -277,7 +296,7 @@ function openWindow(url,width,height)
     <td valign="top" bgcolor="#FFFFFF" class="maincontent">
 	  <p><span class="greentext"><strong>Privacy
       Statement</strong></span></p>
-	  <p><img src="/images/hr.gif" alt="horizontal rule" width="200" height="1"></p>
+	  <p><img src="/images/hr.gif" alt="" width="200" height="1"></p>
 	  <p>Website of Met Éireann - <a href="/contactus/">contact us</a></p>
 	  <p>Met Éireann respects your right to privacy. Any personal information
           which you volunteer on this website will be treated with appropriate
@@ -313,8 +332,8 @@ Glasnevin Hill, Dublin 9. </p></td>
 </tbody></table>
  
 <!-- Irish -->
-<div class="maincontainer">
-  <table width="90%" border="0" cellspacing="0" cellpadding="0">
+<div>
+  <table width="960" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr>
       <td width="93%" style="font-size: 11px"><br>
       Met Éireann, Cnoc Ghlas Naíon, Baile Átha Cliath 9, Éire.
@@ -329,12 +348,14 @@ Glasnevin Hill, Dublin 9. </p></td>
     </tr>
   </tbody></table>
 </div>
+</div>
 <!-- End Irish -->
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-770930-3";
+_udn="met.ie";
 urchinTracker();
 </script>
 <script language="JavaScript" type="text/JavaScript">met_swapClass(1,'mainpublications','navion','navioff','a');met_swapClass(1,'subpublications','on','off','ul');met_downClass('','subon');</script>
