snapsurveys.com (archived on 2009-06-16)
{
  "alexa_rank": 104254,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3364,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.07,
  "homepage_snapshot_redirected_domain": "snapsurveys.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090327172849id_/http://www.snapsurveys.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090327172849id_/http%3A//snapsurveys.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "snapsurveys.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616171013id_/http%3A//www.snapsurveys.com/legal/privacy_policy.shtml",
  "policy_title": "Privacy Policy",
  "policy_url": "snapsurveys.com/legal/privacy_policy.shtml",
  "sha1": "2ebcf76968489743da4ccf7e483b0617934d558a",
  "simhash": 4707269329112632468,
  "simhash_updated": false,
  "site_hostname": "snapsurveys.com",
  "site_url": "http://snapsurveys.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090616171013",
  "word_count": 540,
  "year": 2009
}

--- a/s/sn/sna/snapsurveys.com.html
+++ b/s/sn/sna/snapsurveys.com.html
@@ -1,26 +1,39 @@
-<!--The following is the downloaded HTML source of the snapsurveys.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216100720id_/http%3A//www.snapsurveys.com/legal/privacy_policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snapsurveys.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616171013id_/http%3A//www.snapsurveys.com/legal/privacy_policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/default-page.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-
+<meta name="Keywords" content="survey software, web surveys, online surveys, teacher evaluation, email surveys, customer satisfaction surveys, questionnaire design, market research, PDA surveys">
+<meta http-equiv="imagetoolbar" content="no">
+<meta name="author" content="Snap Surveys">
+<meta name="copyright" content="Snap Surveys">
+<meta name="language" content="English">
 
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Privacy Policy</title>
 <!-- InstanceEndEditable --><!-- InstanceBeginEditable name="description" -->
 <meta name="Description" content="">
 <!-- InstanceEndEditable -->
-<link rel="alternate" type="application/rss+xml" href="rss.xml" title="Snap Surveys News">
-
-<script type="text/javascript" src="/scripts/mercsamples.js"></script>
 <script type="text/javascript" src="/scripts/jumpmenu.js"></script>
-<script type="text/javascript" src="/scripts/pricingjump.js"></script>
-<script type="text/javascript" src="/scripts/snaprange.js"></script>
-<script type="text/javascript" src="/scripts/emailvalidate.js"></script>
-<script type="text/javascript" src="/upgrade/upgrade-form.js"></script>
-<script type="text/javascript" src="/scripts/tabber.js"></script>
+<script type="text/javascript" src="/scripts/jquery.min.js"></script>
+<script type="text/javascript" src="/scripts/jquery.cycle.all.js"></script>
+<script type="text/javascript" src="/scripts/jquery.cycle.options.js"></script>
+<script type="text/javascript" src="/scripts/mootools-core.js"></script>
+<script type="text/javascript" src="/scripts/mootools-more.js"></script>
+<script type="text/javascript" src="/scripts/formcheck/formcheck.js"></script>
+<link rel="stylesheet" href="/scripts/formcheck/theme/classic/formcheck.css" type="text/css" media="screen">
+<!-- This instantiates one single form with the ID 'form'. If multiple forms require validation on any one page, further unique ID's must be added -->
+<script type="text/javascript">
+	window.addEvent('domready', function(){
+    new FormCheck('form');
+	});
+</script>
+<!-- /note -->
+<script type="text/javascript" src="/scripts/mercsamples.js"></script>
 <script type="text/javascript" src="/scripts/popup.js"></script>
-
+<script type="text/javascript" src="/scripts/pricingjump.js"></script>
+<script type="text/javascript" src="/upgrade/upgrade-form.js"></script>
+<script type="text/javascript" src="/scripts/snaprange.js"></script>
 <link rel="shortcut icon" type="image/ico" href="http://www.snapsurveys.com/favicon.ico">
 <link href="/css/screen.css" rel="stylesheet" type="text/css" media="screen">
 <link href="/css/print.css" rel="stylesheet" type="text/css" media="print">
@@ -38,7 +51,7 @@
   <div id="ibInner">
     <div id="ibLang">
       <ul>
-        <li><a href="http://www.snap-benelux.be/">Français/Nederlands</a></li>
+        <li><a rel="nofollow" href="http://www.snap-benelux.be/">Français/Nederlands</a></li>
         <!--<li><a href="http://www.snapsurveys-spain.com/">Español</a></li>-->
         <!--<li><a href="/contact/">Latin America</a></li>-->
       </ul>
@@ -48,6 +61,7 @@
       <ul>
         <li><a href="/contact/" title="Contact the Snap team">Contact us</a></li>
         <li><a href="/about/" title="Learn more about Snap Surveys">About Snap</a></li>
+		<li><a href="/helpdesk/" title="Snap support">HelpDesk</a></li>
       </ul>
     </div>
     <!--/ibMenu-->
@@ -67,6 +81,7 @@
   <li id="nav-home"><a href="/" title="Snap website home page"><span>Home</span></a></li>
   <li id="nav-software"><a href="/software/" title="Snap survey software"><span>Software</span></a></li>
   <li id="nav-surveyshop"><a href="/surveyshop/" title="SurveyShop research services"><span>Outsourcing</span></a></li>
+  <li id="nav-training"><a href="/training/" title="Snap software training"><span>Training</span></a></li>
   <li id="nav-webpoll"><a href="http://www.snapsurveys.com/poll/" title="Free Web Polls"><span>Free Web Polls</span></a></li>
   <li id="nav-community"><a href="/community/" title="News, events, training, guides..."><span>Community</span></a></li>
 </ul>
@@ -145,7 +160,7 @@
 </div>
 <!--/wrap-->
 <div id="footer">
-  <div id="footerInner">Copyright © 2008 Snap Surveys Ltd. All rights reserved worldwide. <a href="/legal/privacy_policy.shtml"><br>
+  <div id="footerInner">Copyright © 2009 Snap Surveys Ltd. All rights reserved worldwide. <a href="/legal/privacy_policy.shtml"><br>
     Privacy Policy</a> | <a href="/legal/legal_statement.shtml">Legal Statement</a> | <a href="/sitemap/">Site Map</a></div>
 </div>
 <!-- /footer -->
