--- a/c/co/coc/cockyboys.com.html
+++ b/c/co/coc/cockyboys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cockyboys.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217213054id_/http%3A//www.cockyboys.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cockyboys.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616174005id_/http%3A//www.cockyboys.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,45 +8,51 @@
 <meta name="description" content="Privacy Policy >  The Men are hotter in Southern California: COCKYBOYS.COM">
 <title>Privacy Policy @ CockyBoys.com</title>
 <script type="text/javascript" src="js/header.js"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/ratings.js"></script>
+<link href="style.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+<!--
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+}
+-->
+</style>
 </head>
 
-
-<body onload="MM_preloadImages('images/interface/btn_logout_on.gif','images/interface/btn_login_on.gif','images/interface/btn_join_on.gif','images/interface/nav_home_on.gif','images/interface/nav_boys_on.gif','images/interface/nav_movies_on.gif','images/interface/nav_photos_on.gif','images/interface/nav_interviews_on.gif','images/interface/nav_livecams_on.gif','images/interface/nav_diaries_on.gif','images/interface/nav_vip_on.gif')">
-<div style="position:absolute;left:160;top:0;z-index:9999;cursor: pointer;
-background-color:transparent;width:245px;height:195px;" onclick="location.href='home.php';">&nbsp;</div>
-<table width="930" border="0" align="center" cellpadding="0" cellspacing="0">
+<body onload="MM_preloadImages('images/interface/nav_homeb.gif','images/interface/nav_boysb.gif','images/interface/nav_moviesb.gif','images/interface/nav_interviewsb.gif','images/interface/nav_diariesb.gif','images/interface/nav_vipb.gif','images/interface/rate_icon_off.gif','images/interface/rate_icon_on.gif')">
+<table width="892" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="930" align="center" valign="top" class="BodyGradient">
-     <table border="0" align="center" cellpadding="0" cellspacing="0">
+    <td width="890" align="center" valign="top"><table width="890" border="0" align="center" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td width="920" align="center" valign="top" class="BodyBlack">
-         <table width="920" border="0" cellpadding="0" cellspacing="0">
-		          <tbody><tr>
-            <td align="right" valign="top" class="MastLogo"><table border="0" cellpadding="0">
+        <td width="888" align="center" valign="top" class="BodyGradient"><table width="886" border="0" align="center" cellpadding="0" cellspacing="0">
+          <tbody><tr>
+            <td align="center" valign="top" class="BodyBlack"><table width="886" border="0" align="center" cellpadding="0" cellspacing="0">
               <tbody><tr>
-                <td align="right" valign="middle" class="PaddingHeavy"><img src="images/interface/slogan_mast.gif" alt="It's Hotter in Southern California" width="459" height="17" border="0"></td>
-		                <td align="right" valign="middle"><a href="join.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('join','','images/interface/btn_join_on.gif',1)"><img src="images/interface/btn_join_off.gif" alt="Join Cocky Boys Today!" name="join" width="93" height="132" border="0" id="join"></a><a href="login.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('login','','images/interface/btn_login_on.gif',1)"><img src="images/interface/btn_login_off.gif" alt="Member Log In" name="login" width="93" height="132" border="0" id="login"></a></td>
-
+                <td align="center" valign="top" class="BodyMetal">
+			<table width="886" border="0" align="center" cellpadding="0" cellspacing="0">
+		          <tbody><tr>
+                    <td align="center" valign="middle" class="PaddingHeavy"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+                      <tbody><tr>
+                        <td align="left" valign="top" class="PaddingHeavy"><a href="home.php"><img src="images/interface/logo_mast.gif" alt="Kyle Majors' Cocky Boys" width="328" height="70" border="0"></a></td>
+			                        <td align="right" valign="middle" class="WhiteBoldArial"><a href="login.php">LOGIN</a> | <a href="freetour.php">FREE TOUR</a></td>
               </tr>
               <tr>
-                <td colspan="2" align="left" valign="middle"><table width="100%" border="0" align="left" cellpadding="0" cellspacing="0">
+                        <td colspan="2" align="center" valign="middle" class="PaddingHeavy"><table border="0" align="center" cellpadding="0" cellspacing="0">
                   <tbody><tr>
-                    <td align="center" valign="middle"><a href="home.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('home','','images/interface/nav_home_on.gif',1)"><img src="images/interface/nav_home_off.gif" alt="Home" name="home" width="48" height="32" border="0" id="home"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <td align="center" valign="middle"><a href="models.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('boys','','images/interface/nav_boys_on.gif',1)"><img src="images/interface/nav_boys_off.gif" alt="Meet the Boys" name="boys" width="80" height="32" border="0" id="boys"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <td align="center" valign="middle"><a href="movies.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('movies','','images/interface/nav_movies_on.gif',1)"><img src="images/interface/nav_movies_off.gif" alt="Movies#" name="movies" width="64" height="32" border="0" id="movies"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <td align="center" valign="middle"><a href="galleries.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('photos','','images/interface/nav_photos_on.gif',1)"><img src="images/interface/nav_photos_off.gif" alt="Photo Galleries" name="photos" width="66" height="32" border="0" id="photos"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <td align="center" valign="middle"><a href="interviews.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('interviews','','images/interface/nav_interviews_on.gif',1)"><img src="images/interface/nav_interviews_off.gif" alt="Interviews" name="interviews" width="97" height="32" border="0" id="interviews"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <!--<td align="center" valign="middle"><a href="livecams.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('livecams','','images/interface/nav_livecams_on.gif',1)"><img src="images/interface/nav_livecams_off.gif" alt="Live Cams" name="livecams" width="84" height="32" border="0" id="livecams" /></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0" /></td>-->
-                    <td align="center" valign="middle"><a href="blogs" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('diaries','','images/interface/nav_diaries_on.gif',1)"><img src="images/interface/nav_diaries_off.gif" alt="Diaries" name="diaries" width="62" height="32" border="0" id="diaries"></a></td>
-                    <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" width="2" height="32" border="0"></td>
-                    <td align="center" valign="middle"><a href="vip.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('vip','','images/interface/nav_vip_on.gif',1)"><img src="images/interface/nav_vip_off.gif" alt="Enter the VIP Lounge" name="vip" width="28" height="32" border="0" id="vip"></a></td>
+                            <td align="center" valign="middle"><a href="home.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('home','','images/interface/nav_homeb.gif',1)"><img src="images/interface/nav_homea.gif" alt="Home" name="home" width="52" height="28" border="0" id="home"></a></td>
+                            <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" alt="-" width="23" height="28" border="0"></td>
+                            <td align="center" valign="middle"><a href="models.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('theboys','','images/interface/nav_boysb.gif',1)"><img src="images/interface/nav_boysa.gif" alt="The Boys" name="theboys" width="100" height="28" border="0" id="theboys"></a></td>
+                            <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" alt="-" width="23" height="28" border="0"></td>
+                            <td align="center" valign="middle"><a href="movies.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('movies','','images/interface/nav_moviesb.gif',1)"><img src="images/interface/nav_moviesa.gif" alt="Movies" name="movies" width="74" height="28" border="0" id="movies"></a></td>
+                            <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" alt="-" width="23" height="28" border="0"></td>
+                            <td align="center" valign="middle"><a href="interviews.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('interviews','','images/interface/nav_interviewsb.gif',1)"><img src="images/interface/nav_interviewsa.gif" alt="Interviews and Blogs" name="interviews" width="116" height="28" border="0" id="interviews"></a></td>
+                            <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" alt="-" width="23" height="28" border="0"></td>
+                            <td align="center" valign="middle"><a href="blogs/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('diaries','','images/interface/nav_blogsb.gif',1)"><img src="images/interface/nav_blogsa.gif" alt="Diaries and Blogs" name="blogs" height="28" border="0" id="blogs"></a></td>
+                            <td align="center" valign="middle"><img src="images/interface/nav_pipe.gif" alt="-" width="23" height="28" border="0"></td>
+                            <td align="center" valign="middle"><a href="vip.php" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('vip','','images/interface/nav_vipb.gif',1)"><img src="images/interface/nav_vipa.gif" alt="V.I.P. Section" name="vip" width="32" height="28" border="0" id="vip"></a></td>
                   </tr>
                 </tbody></table></td>
                 </tr>
@@ -61,7 +67,8 @@ background-color:transparent;width:245px;height:195px;" onclick="location.href='
 
 
 
-Cockyboys.com Privacy Policy
+<blockquote>
+<p>Cockyboys.com Privacy Policy</p>
 <p>Cockyboys.com (“Website”) has created this privacy policy ("Policy") 
   in order to demonstrate our company's commitment to privacy. The following discloses 
   our information gathering and disseminating practices. This Policy also instructs 
@@ -185,6 +192,7 @@ Cockyboys.com Privacy Policy
   will use reasonable efforts to delete this information from our existing files.</p>
 <p>FURTHER QUESTIONS. Further Customer Service questions? Contact us at our email 
   address customerservice.</p>
+</blockquote>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
@@ -194,21 +202,23 @@ urchinTracker();
 
 
 </td></tr>
-		          <tr>
-            <td align="center" valign="middle" class="Footer"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr>
-                <td align="right" valign="middle" class="FooterText"><img src="images/interface/slogan_footer.gif" alt="It's Hotter in Southern California" width="330" height="12" border="0"><br>
-                  Copyright © 2007 Cocky Boys.™ All rights reserved.</td>
-                <td width="55%" align="left" valign="middle" class="FooterText"><a href="home.php">Home</a> | <a href="models.php">The Boys</a> | <a href="movies.php">Movies</a> | <a href="galleries.php">Photos</a> | <a href="interviews.php">Interviews</a> | <a href="diaries.php">Diaries</a> | <a href="vip.php">VIP</a> | <a href="/blogs/?author=4">Kyle’s Journal</a><br>
-                  <a href="headlines.php">Headlines</a> | <a href="faq.php">FAQ</a> | <a href="getdiscovered.php">Get Discovered</a><br>
-                  <a href="webmasters.php">Webmasters</a> | <a href="privacy.php">Privacy Notice</a> | <a href="termsofuse.php">Terms of Use</a> | <a href="hitmeup.php">Hit Me Up</a></td>
+		              <tr>
+                <td align="center" valign="middle" class="Footer"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tbody><tr>
+                    <td align="right" valign="middle" class="FooterText"><img src="images/interface/slogan_footer.gif" alt="It's Hotter in Southern California" width="330" height="12" border="0"><br>
+                      Copyright © 2007-2009 Cocky Boys.™ All rights reserved.</td>
+                    <td width="55%" align="left" valign="middle" class="FooterText"><a href="home.php" class="RedLink">Home</a> | <a href="models.php" class="RedLink">The Boys</a> | <a href="movies.php" class="RedLink">Movies</a> | <a href="interviews.php" class="RedLink">Interviews</a> | <a href="diaries.php" class="RedLink">Diaries</a> | <a href="vip.php" class="RedLink">VIP</a><br>
+                        <a href="headlines.php" class="RedLink">Headlines</a> | <a href="faq.php" class="RedLink">FAQ</a> | <a href="getdiscovered.php" class="RedLink">Get Discovered</a><br>
+                        <a href="webmasters.php" class="RedLink">Webmasters</a> | <a href="privacy.php" class="RedLink">Privacy Notice</a> | <a href="termsofuse.php" class="RedLink">Terms of Use</a> | <a href="hitmeup.php" class="RedLink">Hit Me Up</a></td>
+                  </tr>
+                  <tr>
+                    <td colspan="2" align="center" valign="middle" class="UpdateTitle"><a href="2257.php" class="RedLink">18 U.S.C 2257 Record-Keeping Requirements Compliance Statement</a></td>
+                  </tr>
+                </tbody></table></td>
               </tr>
-              <tr>
-                <td colspan="2" align="center" valign="middle" class="UpdateTitle"><a href="2257.php">18 U.S.C 2257 Record-Keeping Requirements Compliance Statement</a></td>
-                </tr>
-            </tbody></table></td>
-          </tr>
 
+	    </tbody></table></td>
+          </tr>
         </tbody></table></td>
       </tr>
     </tbody></table></td>
@@ -221,4 +231,5 @@ _uacct = "UA-2484231-1";
 urchinTracker();
 </script>
 
-</body></html>
+
+</td></tr></tbody></table></body></html>
